k8s/service-eco-law.yaml
apiVersion: v1
kind: Service
metadata:
  name: eco-law-service
  labels:
    app: eco-law-service
spec:
  ports:
  - name: eco-law-service
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    project: eco-law-app
  type: NodePort
status:
  loadBalancer: {}
